--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 
   <script>
-    var cards = ["A", "A", "B", "B", "C", "C", "D", "D", "E", "E", "F", "F"]; // Valores das cartas
+    var cards = ["🐮", "🐮", "🐷", "🐷", "🐱", "🐱", "🐶", "🐶", "🦋", "🦋", "🐥", "🐥"]; // Valores das cartas
     var selectedCards = []; // Cartas selecionadas pelo jogador
 
     // Função para embaralhar as cartas
